--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
             <div class="header-content">
                 <div class="logo"><b>Dakkar's Landing Page</b></div>
                 <ul>
-                    <li><a href="https://www.theodinproject.com/lessons/foundations-landing-page">Odin Project: Landing Page</a></li>
+                    <li><a href="https://www.theodinproject.com/lessons/foundations-landing-page">Odin Project Specs</a></li>
                     <li><a href="https://prince-dakkar.github.io/odin-recipes/index.html">My Recipe Project</a></li>
                     <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley">Click?</a></li>
+                    <li><a href="./pages/guide_images.html">Big guide images</a></li>
                 </ul>
             </div>
         </div>
@@ -105,6 +106,6 @@
 
 
 
-        <div class="footer">Copyright Dakkar (ME) for The Odin Project </div>
+        <div class="footer">Copyright Dakkar (ME) for The Odin Project 2024</div>
     </body>
 </html>
