--- a/index.html
+++ b/index.html
@@ -103,9 +103,6 @@
 
         </div>
 
-
-
-
-        <div class="footer">Copyright Dakkar (ME) for The Odin Project 2024</div>
+        <div class="footer">Copyright © Dakkar 2024</div>
     </body>
 </html>
