--- a/pages/guide_images.html
+++ b/pages/guide_images.html
@@ -36,6 +36,6 @@
         </div>
 
 
-        <div class="footer">Copyright Dakkar (ME) AGAIN for The Odin Project 2024</div>
+        <div class="footer">Copyright © Dakkar 2024</div>
     </body>
 </html>
