Add Rock/Paper/Scissors Project

--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
             <div class="header-content">
                 <div class="logo"><b>Dakkar's Landing Page</b></div>
                 <ul>
-                    <li><a href="https://www.theodinproject.com/lessons/foundations-landing-page">Odin Project Specs</a></li>
-                    <li><a href="https://prince-dakkar.github.io/odin-recipes/index.html">My Recipe Project</a></li>
+                    <li><a href="https://www.theodinproject.com/lessons/foundations-landing-page">Odin Specs</a></li>
+                    <li><a href="https://prince-dakkar.github.io/odin-recipes/index.html">My Recipe Proj</a></li>
+                    <li><a href="https://prince-dakkar.github.io/odin-rock-paper-scissors/">My Rock/Paper/Scissors Proj</a></li>
                     <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley">Click?</a></li>
-                    <li><a href="./pages/guide_images.html">Big guide images</a></li>
+                    <li><a href="./pages/guide_images.html">Big Site Imgs</a></li>
                 </ul>
             </div>
         </div>
