Updated links and added new project to offerings

--- a/index.html
+++ b/index.html
@@ -18,10 +18,8 @@
                 <div class="logo"><b>Dakkar's Landing Page</b></div>
                 <ul>
                     <li><a href="https://www.theodinproject.com/lessons/foundations-landing-page">Odin Specs</a></li>
-                    <li><a href="https://prince-dakkar.github.io/odin-recipes/index.html">My Recipe Proj</a></li>
-                    <li><a href="https://prince-dakkar.github.io/odin-rock-paper-scissors/">My Rock/Paper/Scissors Proj</a></li>
                     <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley">Click?</a></li>
-                    <li><a href="./pages/guide_images.html">Big Site Imgs</a></li>
+                    <li><a href="./pages/guide_images.html">Original Site Images</a></li>
                 </ul>
             </div>
         </div>
@@ -31,11 +29,11 @@
                 <div class="intro-left">
                     <p id="intro-text"><span id="intro-header">This website is awesome</span> <br>
                         This website Landing Page showcases formatting font and content, use of flexbox, and the ability to recreate a requested layout.
-                        Explore some of the links on the page to see the original project specs, my prev project (very rough...) and some other tidbits! 
+                        Explore some of the links on the page to see the original specs for this specific project, my other Odin projects and some other tidbits! 
                         Enjoy! 
                     </p>
                     <p> - Dakkar</p>
-                    <button class="sign-up" id="action-intro" onclick=alert_not_impl() >Sign up</button>
+                    <button class="sign-up" id="action-intro" onclick=alert_not_impl() >Connect</button>
                 </div>
 
                 <div class="image-placeholder">  <!-- this is a placeholder for an image -->
@@ -94,14 +92,12 @@
         <div class="four">
             <div class="inner-four">
                 <div class="call-to-action">
-                    <p class="call-to-action-text"><strong>Call to action! It's time! </strong><br> Find my first project (Odin Recipes) by clicking that button right over there!</p>
+                    <p class="call-to-action-text"><strong>Call to action! It's time! </strong><br> Explore my other projects here!</p>
                 </div>
-                <a class="btn" href="https://prince-dakkar.github.io/odin-recipes/index.html">
-                    Click me!
-                  </a>
-                <!-- <button class="sign-up" id="action-call"> Sign up</button> -->
+                <a class="btn" href="https://prince-dakkar.github.io/odin-recipes/index.html"> Odin Recipes (And More...) </a>
+                <a class="btn" href="https://prince-dakkar.github.io/odin-rock-paper-scissors/"> Rock/Paper/Scissors </a>
+                <a class="btn" href="https://prince-dakkar.github.io/odin-etchy-sketchy/"> Etch-a-Sketch </a>
             </div>
-
         </div>
 
         <div class="footer">Copyright © Dakkar 2024</div>
