fixes flex for call to action

--- a/index.html
+++ b/index.html
@@ -83,9 +83,7 @@
                 is that it looks nice.
                 </p>
                 <p class="enquote">-Dakkar, God of Odin Project Learning</p>
-            </div>
-            
-            
+            </div> 
         </div>
 
 
@@ -97,6 +95,7 @@
                 <a class="btn" href="https://prince-dakkar.github.io/odin-recipes/index.html"> Odin Recipes (And More...) </a>
                 <a class="btn" href="https://prince-dakkar.github.io/odin-rock-paper-scissors/"> Rock/Paper/Scissors </a>
                 <a class="btn" href="https://prince-dakkar.github.io/odin-etchy-sketchy/"> Etch-a-Sketch </a>
+                <a class="btn" href="https://prince-dakkar.github.io/odin-calculator/"> Calculator </a>
             </div>
         </div>
 
